# mandala

./: .gitignore  CLAUDE.md  CODE_CONVENTIONS.md  CONCEPTS.md  Cargo.toml  DEPRECATED_ROADMAP.md  ROADMAP.md  TEST_CONVENTIONS.md  TODO.md  Trunk.toml  bench.sh  build.sh  run.sh  test.sh
.github/workflows/: test.yml
assets/mutations/: application.json
config/: default_keybinds.json
crates/maptool/: Cargo.toml
crates/maptool/src/: export.rs  main.rs
format/: README.md  channels.md  enums.md  ids.md  migration.md  mutations.md  palettes.md  portal-labels.md  schema.md  text-runs.md  validation.md  zoom-bounds.md
lib/baumhard/: CONVENTIONS.md  Cargo.toml  build.rs
lib/baumhard/benches/: test_bench.rs
lib/baumhard/src/: lib.rs
maps/: stress_long_edges.mindmap.json  testament.mindmap.json  theme_demo.mindmap.json
maps/docs/: mindmap-json-format.md
src/: main.rs
src/application/: app.rs  baumhard_adapter.rs  clipboard.rs  color_picker.rs  common.rs  document.rs  frame_throttle.rs  keybinds.rs  mod.rs  palette.rs  renderer.rs  scene_host.rs
src/application/app/: click.rs  color_picker_flow.rs  console_input.rs  drain_frame.rs  edge_drag.rs  edge_label_drag.rs  event_cursor_moved.rs  event_keyboard.rs  event_mouse_click.rs  freeze_watchdog.rs  input_context.rs  label_edit.rs  mod.rs  portal_label_drag.rs  run_native.rs  run_native_init.rs  run_wasm.rs  scene_rebuild.rs  tests.rs  text_edit.rs
src/application/color_picker/: clipboard.rs  compute.rs  compute_positions.rs  compute_sizing.rs  geometry.rs  glyph_tables.rs  hit.rs  layout.rs  mod.rs  (+4 more)
web/: index.html
(+324 files in other folders)
