workspace = { members = ["lib/baumhard"] }
[package]
name = "mandala"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "2.0.0"
unicode-segmentation = "1.11.0"
wgpu = "28.0"
glyphon = "0.10.0"
cosmic-text = "0.15.0"
tinyvec = "1.8.0"
# Alternative: https://crates.io/crates/ab_glyph
glam = {version = "0.29.0", features = ["serde"]}
futures = "0.3.30"
winit = "0.30.1"
serde = {version = "1.0.194", features = ["derive"]}
serde-lexpr = "0.1.3"
lazy_static = "1.5.0"
syn = "2.0.53"
log = { version = "0.4.20", features = ["release_max_level_off"] }
env_logger = "0.11.3"
smol_str = "0.3.1"
indextree = {version = "4.7.2", features = ["serde"]}
ttf-parser = "0.25.0"
baumhard = {path="./lib/baumhard"}

[build-dependencies]
walkdir = "2.5.0"
path-slash = "0.2.1"
ttf-parser = "0.25.0"
regex = "1.11.0"
lazy_static = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.16.0"
rustix = "0.38.28"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

